引用计数算法的缺陷